<resources>
    <string name="app_name">Get-Talent</string>
    <string name="on_board_text">Temukan Developer berbakat dan terbaik di berbagai bidang keahlian</string>
    <string name="onboard_talent_login_text">Masuk sebagai pekerja</string>
    <string name="onboard_company_login_text">masuk sebagai perekrut</string>
    <string name="or">or</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="daftar_disini">daftar disini</string>
    <string name="anda_belum_punya_akun">Anda belum punya akun?</string>
    <string name="teks_nama_panjang">Masukan nama panjang</string>
    <string name="teks_email">Masukan alamat email</string>
    <string name="teks_handphone">Masukan no handphone</string>
    <string name="sign_up">SIGN UP</string>
    <string name="masukan_kata_sandi">Masukan kata sandi</string>
    <string name="teks_confirm_password">Masukan konfirmasi kata sandi</string>
    <string name="anda_sudah_punya_akun">anda sudah punya akun?</string>
    <string name="masuk_disini">Masuk disini</string>
    <string name="teks_company_name">Masukan nama perusahaan</string>
    <string name="posisi_di_perusahaan_anda">Posisi di perusahaan anda</string>
    <string name="text_reset_password">Masukkan email verifikasi akun pengguna kata sandi Anda dan kami akan mengirimkan tautan pengaturan ulang kata sandi</string>
    <string name="text_confirm_password">Anda perlu mengubah kata sandi untuk mengaktifkan akun Anda</string>
    <string name="reset_password">Reset Password</string>
    <string name="kirim_email_reset_password">Kirim email reset password</string>
    <string name="silahkan_login_dengan_akun_anda">Silahkan login dengan akun Anda</string>
    <string name="comdeskripsi">The Shelby Company Limited is a limited company owned by the Shelby Family. It is a successful business that continues to thrive through the 1920s.</string>
    <string name="com_location">Banyumas, Jawa tengah</string>
    <string name="company_email">shelbycompany@gmail.com</string>
    <string name="git_teks">shelbycompany18</string>
    <string name="ig_teks">shelby_18</string>
    <string name="eng_deskripsi">Saya adalah orang yang bisa mengambil keputusan dengan cepat dan tepat, bahkan saat berada pada situasi genting atau di bawah tekanan.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_date_teks">Sen, 15 November 2020</string>
    <string name="tv_name">John García</string>
    <string name="greeting">Hai,</string>
    <string name="job_title_1">Web Developer</string>
    <string name="job_title_2">Android Developer</string>
    <string name="eng_name">Thomas Shelby</string>
    <string name="eng_name2">John Shelby</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis tortor sem, lobortis at aliquam lobortis, ultrices in eros. In nec velit tellus. Duis finibus molestie nisi. Sed eget diam sem. Pellentesque vitae magna facilisis</string>
    <string name="sort_by_name">Sortir berdasarkan nama</string>
    <string name="sort_by_skill">Sortir berdasarkan skill</string>
    <string name="sort_by_location">Sortir berdasarkan lokasi</string>
    <string name="sort_by_job_type1">Sortir berdasarkan freelance</string>
    <string name="sort_by_job_type2">Sortir berdasarkan fulltime</string>
    <string name="daftar">Daftar</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="data_diri">Data diri</string>
    <string name="tv_nama_perusahaan">Nama Perusahaan</string>
    <string name="et_masukan_nama_perusahaan">Masukan nama perusahaan</string>
    <string name="tv_bidang_perusahaan">Bidang Perusahaan</string>
    <string name="et_masukan_bidang_perusahaan">Masukan bidang perusahaan</string>
    <string name="tv_kota">Kota</string>
    <string name="et_masukan_kota">Masukan kota</string>
    <string name="tv_deskripsi_singkat">Deskripsi singkat</string>
    <string name="et_tuliskan_deskripsi_singkat">Tuliskan deskripsi singkat</string>
    <string name="tv_com_email">Email</string>
    <string name="et_com_masukan_email">Masukan email</string>
    <string name="tv_com_instagram">Instagram</string>
    <string name="et_masukan_instagram">Masukan Instagram</string>
    <string name="tv_nomor_telepon">Nomor telepon</string>
    <string name="et_masukan_nomor_telepon">Masukan nomor telepon</string>
    <string name="tv_linkedin">Linkedin</string>
    <string name="et_masukan_linkedin">Masukan linkedin</string>
    <string name="pt_shelby_company">PT. Shelby Company</string>
    <string name="edit">Edit</string>
    <string name="eng_masukan_nama_lengkap">Masukan nama lengkap</string>
    <string name="eng_job_title">Job title</string>
    <string name="eng_masukan_job_title">Masukan Job title</string>
    <string name="eng_domisili">Domisili</string>
    <string name="eng_masukan_domisili">Masukan domisili</string>
    <string name="eng_tempat_kerja">Tempat kerja</string>
    <string name="eng_masukan_tempat_kerja">Masukan tempat kerja</string>
    <string name="eng_deskripsi_singkat">Deskripsi singkat</string>
    <string name="cv_skill">Skill</string>
    <string name="et_xp_posisi">Web developer</string>
    <string name="tv_xp_com_name">Nama perusahaan</string>
    <string name="pt_suka_maju">PT SUKA MAJU</string>
    <string name="deskripsikan_pekerjaan_anda">Deskripsikan pekerjaan anda</string>
    <string name="tv_xp_date">Bulan/tahun</string>
    <string name="january_2018">January 2018</string>
    <string name="open">open</string>
    <string name="close">close</string>


    <string name="i_engineer_name"><i>Engineer Name</i></string>
    <string name="i_job_title"><i>Job title not set</i></string>
    <string name="i_domicile"><i>Domicile not set</i></string>
    <string name="i_description"><i>Description not set</i></string>
    <string name="i_email"><i>Email not set</i></string>
    <string name="i_instagram"><i>Instagram not set</i></string>
    <string name="i_github"><i>Github not set</i></string>
    <string name="i_gitlab"><i>Gitlab not set</i></string>

</resources>