<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.detailProfile.ProfileCompanyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--Photo profile, edit, company name, location-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/profil1"
                    android:layout_marginTop="30dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/view1"
                    />

                <TextView
                    android:id="@+id/tv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textSize="24sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_edit"
                    android:drawablePadding="5dp"
                    app:layout_constraintTop_toBottomOf="@id/profile_photo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:text="@string/pt_shelby_company"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_edit"/>

                <TextView
                    android:id="@+id/company_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Financial"
                    android:layout_marginTop="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_name"/>

                <TextView
                    android:id="@+id/com_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/com_location"
                    android:textSize="20sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/company_field"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:drawableStartCompat="@drawable/ic_location" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

<!--Simpan & Batal-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_container2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_container1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_edit_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simpan"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/rounded_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />

                <Button
                    android:id="@+id/btn_edit_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/batal"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/rounded_button"
                    app:layout_constraintTop_toBottomOf="@id/btn_edit_save"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_container3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_container2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="24sp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/data_diri"
                    android:layout_margin="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_container4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_container3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nama_perusahaan"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/et_edit_com_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/et_masukan_nama_perusahaan"
                    android:inputType="text"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/rectangle_border"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_bidang_perusahaan"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/et_edit_com_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/et_masukan_bidang_perusahaan"
                    android:inputType="text"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/rectangle_border"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_kota"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/et_edit_com_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/et_masukan_kota"
                    android:inputType="text"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/rectangle_border"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_deskripsi_singkat"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/et_edit_com_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/et_tuliskan_deskripsi_singkat"
                    android:inputType="text"
                    android:maxLines="7"
                    android:maxLength="150"
                    android:padding="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/rectangle_border"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_com_email"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/et_edit_com_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/et_com_masukan_email"
                    android:inputType="text"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/rectangle_border"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_com_instagram"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/et_edit_com_instagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/et_masukan_instagram"
                    android:inputType="text"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/rectangle_border"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nomor_telepon"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/et_edit_com_nohp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/et_masukan_nomor_telepon"
                    android:inputType="text"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/rectangle_border"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_linkedin"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"/>

                <EditText
                    android:id="@+id/et_edit_com_linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/et_masukan_linkedin"
                    android:inputType="text"
                    android:padding="16dp"
                    android:layout_marginBottom="20dp"
                    android:singleLine="true"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/rectangle_border"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
